[tool.poetry]
name = "titiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.55.1"}
jinja2 = "^2.11.2"
rio-color = "^1.0.0"
rio-tiler-crs = "~=2.0"
python-binary-memcached = "^0.29.0"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
format = "scripts:format"
start = "scripts:start"
api = "scripts:api"
test = "scripts:test"
freeze = "scripts:freeze"
docker = "scripts:docker"
docker-run-bash = "scripts:docker_run_bash"
docker-push = "scripts:docker_push"
deploy = "scripts:deploy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
